@@ -54,7 +54,6 @@ t/100-premature-bailout.t
 t/110-iterators.t
 t/120-harness.t
 t/130-source.t
-t/140-varsource.t
 t/150-results.t
 t/160-yaml.t
 t/compat/00compile.t
