@@ -22,8 +22,6 @@ $VERSION = '0.51';
   my $it = TAP::Parser::Iterator->new(\@array);
 
   my $line = $it->next;
-  if ( $it->is_first ) { ... }
-  if ( $it->is_last ) { ... }
 
 Originally ripped off from C<Test::Harness>.
 
@@ -44,14 +42,6 @@ Iterate through it, of course.
 =head2 next_raw()
 
 Iterate raw input without applying any fixes for quirky input syntax.
-
-=head2 is_first()
-
-Returns true if on the first line.  Must be called I<after> C<next()>.
-
-=head2 is_last()
-
-Returns true if on or after the last line.  Must be called I<after> C<next()>.
 
 =cut
 
@@ -91,11 +81,8 @@ $VERSION = '0.51';
 sub new {
     my ( $class, $thing ) = @_;
     bless {
-        fh       => $thing,
-        next     => undef,
-        exit     => undef,
-        is_first => 0,
-        is_last  => 0,
+        fh   => $thing,
+        exit => undef,
     }, $class;
 }
 
@@ -118,38 +105,21 @@ sub pid {
     return $self;
 }
 
-sub wait     { $_[0]->{wait} }
-sub exit     { $_[0]->{exit} }
-sub is_first { $_[0]->{is_first} }
-sub is_last  { $_[0]->{is_last} }
+sub wait { $_[0]->{wait} }
+sub exit { $_[0]->{exit} }
 
 sub next_raw {
     my $self = shift;
     my $fh   = $self->{fh};
 
-    my $line;
-    if ( defined( $line = $self->{next} ) ) {
-        if ( defined( my $next = <$fh> ) ) {
-            chomp( $self->{next} = $next );
-            $self->{is_first} = 0;
-        }
-        else {
-            $self->_finish;
-        }
+    if ( defined( my $line = <$fh> ) ) {
+        chomp $line;
+        return $line;
     }
     else {
-        $self->{is_first} = 1 unless $self->{is_last};
-        local $^W;    # Don't want to chomp undef values
-        chomp( $line = <$fh> );
-        unless ( defined $line ) {
-            $self->_finish;
-        }
-        else {
-            chomp( $self->{next} = <$fh> );
-        }
+        $self->_finish;
+        return;
     }
-
-    return $line;
 }
 
 sub next {
@@ -180,8 +150,6 @@ sub _finish {
 
     close $self->{fh};
 
-    $self->{is_first} = 0;   # need to reset it here in case we have no output
-    $self->{is_last}  = 1;
     $self->{next} = undef;
     $self->{wait} = $status;
     $self->{exit} = $self->_wait2exit($status);
@@ -204,10 +172,13 @@ sub new {
     }, $class;
 }
 
-sub wait     { shift->exit }
-sub exit     { shift->is_last ? 0 : () }
-sub is_first { 1 == $_[0]->{idx} }
-sub is_last  { @{ $_[0]->{array} } <= $_[0]->{idx} }
+sub wait { shift->exit }
+
+sub exit {
+    my $self = shift;
+    return 0 if $self->{idx} >= @{ $self->{array} };
+    return;
+}
 
 sub next {
     my $self = shift;
